--- a/package.json
+++ b/package.json
@@ -10,22 +10,34 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "expo": "^35.0.0",
+    "expo-camera": "~7.0.0",
+    "expo-file-system": "~7.0.0",
+    "expo-image-picker": "~7.0.0",
+    "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
+    "expo-sqlite": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.5.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.11",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-header-buttons": "^3.0.4",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/expo__vector-icons": "^9.0.1",
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
     "@types/react-navigation": "^3.4.0",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "babel-preset-expo": "^7.1.0",
     "typescript": "^3.6.3"
   },
